z-index fix

--- a/src/pages/Main/MainCarousel/MainCarousel.scss
+++ b/src/pages/Main/MainCarousel/MainCarousel.scss
@@ -57,9 +57,15 @@
             max-height: 400px;
             width: 100%;
             object-fit: contain;
+            transition: all 0.2s;
         }
     }
     .slick-current + .slick-active {
         transform: scale(1.25);
+        position: relative;
+        z-index: 1;
+        img {
+            filter: drop-shadow(0px 0px 12px rgba(0, 0, 0, 0.05));
+        }
     }
 }
